--- a/photos.css
+++ b/photos.css
@@ -1,7 +1,7 @@
 /*      
     Program Name:  Photo Gallery Application
-    Author: 
-    Date:   
+    Author: patirck beverly
+    Date:   11/3/17
     Filename: photos.css
 */
 
